# xforcesolutions

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FLY_SETUP.md  Leptos.toml  PROFILE_README.md  RAILWAY_DEPLOY.md  README.md  Trunkl.toml  docker-compose.yml  fly.toml  index.html  package-lock.json  package.json  railway.json
.github/workflows/: deploy.yml
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 001_create_users_table.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/api/: contact.rs  mod.rs
backend/src/app_middleware/: mod.rs  rate_limit.rs
backend/src/config/: mod.rs  settings.rs  validation.rs
backend/src/database/: connection.rs
backend/src/database/models/: user.rs
backend/src/database/repositories/: user_repository.rs
backend/src/handlers/: auth.rs  mod.rs  projects.rs  users.rs
backend/src/server/: css.rs  mod.rs  router.rs  static_files.rs
backend/src/services/: contact.rs  email.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js  trunk.toml
frontend/public/docs/: contracts.html  data-flows.html  index.html  integrations.html  news-service.html  styles.css  tech-stack.html  terminal.html
frontend/src/: lib.rs  main.rs  routes.rs
frontend/src/components/: mod.rs  navbar.rs  theme_toggle.rs
frontend/src/components/forms/: mod.rs  user_registration.rs
frontend/src/components/layout/: navigation.rs
frontend/src/pages/: about.rs  architecture.rs  contact.rs  contracts.rs  documentation.rs  home.rs  learn.rs  learn_more.rs  login_page.rs  mod.rs  not_found.rs  projects.rs  proposal.rs  roadmap.rs  status.rs  voters.rs
frontend/src/pages/roadmap/: mod.rs  month1.rs  month2.rs  month3.rs  month4.rs
frontend/src/services/: api.rs  auth.rs  mod.rs
frontend/src/ui/: nav.rs
frontend/style/: main.css  tailwind.css
shared/: Cargo.toml
shared/src/: contact.rs  lib.rs
shared/src/dto/: auth.rs  logindata.rs  mod.rs  projects.rs  user.rs
