[workspace]
members = [
    "frontend",
]
resolver = "2"

[workspace.dependencies]
# Leptos ecosystem (client-side only, no SSR)
leptos = { version = "0.8.12", default-features = false }
leptos_meta = { version = "0.8.5", default-features = false }
leptos_router = { version = "0.8.6", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2.0"
derive_more = { version = "1.0.0", features = ["from", "display"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

# Leptos workspace configuration (static site only)
[[workspace.metadata.leptos]]
# Project name
name = "xforcesolutions"
# The package that contains the library (WASM frontend)
lib-package = "frontend"
# The site root folder is where cargo-leptos generates all output
site-root = "target/site"
# The site package directory is where the app's static assets are located
site-pkg-dir = "pkg"
# The browserlist query used for optimizing the CSS
browserquery = "defaults"
# The environment Leptos will run in (static site)
env = "PROD"
# The features to use when compiling the lib target (client-side only)
lib-features = ["hydrate"]
# The profile to use for the lib target when compiling for release
lib-profile-release = "wasm-release"
# Assets source directory
assets-dir = "frontend"
# The output name used by cargo-leptos for the client-side bundle
output-name = "xforcesolutions"
# The tailwind input file
tailwind-input-file = "frontend/style/tailwind.css"
# The tailwind config file
tailwind-config-file = "frontend/tailwind.config.js"


