[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.45.1" , features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls","macros"]}
serde = "1.0.219"
tower-http = {version = "0.6.6" , features = ["cors","fs"]}
argon2 = "0.5.3"
dotenvy = "0.15.7"
thiserror = "2.0.12"
shared = {path = "../shared"}


