[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { version = "0.8.6", default-features = false }
shared = { path = "../shared" }
serde = { workspace = true }
console_error_panic_hook = "0.1"
tracing = { workspace = true }
chrono = "0.4"
wasm-bindgen = "0.2"
web-sys = { workspace = true }
js-sys = { workspace = true }

# Email (only for SSR, not for WASM)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"], optional = true }
dotenvy = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "email-ssr"]
email-ssr = ["lettre", "dotenvy"]
